--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,57 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+input[type=text]{
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-flex;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  align-content: flex-end;
+}
+
+p{
+  text-align: center;
+}
+
+img{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.logo{
+  height: 100px;
+  width: auto;
+  display: inline-flex;
+}
+
+.adjust_image{
+  height: 150px;
+  width: auto;
+  display: inline-block;
+}
+
+.search_form{
+  vertical-align: middle;
+}
+
+.results{
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+
+.unitary_result{
+  padding: 05px;
+}
+
+.block{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
